# mdspan-test

./: .gitignore  CMakeLists.txt  CMakeSettings.json  mdspan.h  mdspan.sln  mdspan.vcxproj  mdspan.vcxproj.filters
test/: test.cpp  test.vcxproj
tests/: CMakeLists.txt  test.cpp
